--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 			<li>You're excellent</li>
 		</ul>
 
-		<img
+		<img id="ducky"
 			src="https://images.unsplash.com/photo-1601829534265-66684bd4dcc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80">
 
 		<h2>Contact Us</h2>
