--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,44 @@
-Not implemented yet! 
+<!DOCplaceholder="" TYPE html>
+    <html>
 
-<br>
-<br>
+    <head>
+        <title>Profile Page</title>
+        <link href="styles.css" rel="stylesheet">
 
-<a href="./home.html"><< Back </a>
+    </head>
+
+    <body>
+        <nav>
+            <ol>
+                <li class="crumb"><a href="./home.html">Home</a></li>
+                <li class="crumb"><a href="./profile.html">Profile</a></li>
+                <li class="crumb"><a href="./about.html">About</a></li>
+            </ol>
+        </nav>
+
+        <h1>My Name is Zack</h1>
+        <p>I'm learning to program to hopefully accelerate my career but if the recession hits in late 2022 who even
+            knows.</p>
+        <h3>My interests include:</h3>
+        <ul>
+            <li>Riding and Building Motorcycles</li>
+            <li>Lifting Weights</li>
+            <li>Photographing Clouds</li>
+        </ul>
+
+        <button id="color">My Favorite Color</button>
+        <button id="place">My Favorite Place</button>
+        <button id="ritual">My Favorite Ritual</button>
+
+        <h2>Contact Me</h2>
+        <form id="contact-form" class="form">
+            <input id="contact-form-name" class="form-input" placeholder="Your Name" type="text">
+            <input id="contact-form-email" class="form-input" placeholder="Your Email" type="email">
+            <input id="contact-form-phone" class="form-input" placeholder="Your Phone" type="phone">
+            <textarea id="contact-form-message" class="form-input" placeholder="Your Message" rows="5" cols="21"></textarea>
+            <button id="contact-form-message" class="form-btn" >Submit Message</button>
+        </form>
+
+    </body>
+
+    </html>
