added part 4 js

--- a/profile.html
+++ b/profile.html
@@ -35,10 +35,12 @@
             <input id="contact-form-name" class="form-input" placeholder="Your Name" type="text">
             <input id="contact-form-email" class="form-input" placeholder="Your Email" type="email">
             <input id="contact-form-phone" class="form-input" placeholder="Your Phone" type="phone">
-            <textarea id="contact-form-message" class="form-input" placeholder="Your Message" rows="5" cols="21"></textarea>
-            <button id="contact-form-message" class="form-btn" >Submit Message</button>
+            <textarea id="contact-form-message" class="form-input" placeholder="Your Message" rows="5"
+                cols="21"></textarea>
+            <button id="contact-form-message" class="form-btn">Submit Message</button>
         </form>
 
+        <script src="profile.js"></script>
     </body>
 
     </html>
