added part 5 styling

--- a/profile.html
+++ b/profile.html
@@ -26,9 +26,9 @@
             <li>Photographing Clouds</li>
         </ul>
 
-        <button id="color">My Favorite Color</button>
-        <button id="place">My Favorite Place</button>
-        <button id="ritual">My Favorite Ritual</button>
+        <button id="color" class="profile-btn">My Favorite Color</button>
+        <button id="place" class="profile-btn">My Favorite Place</button>
+        <button id="ritual" class="profile-btn">My Favorite Ritual</button>
 
         <h2>Contact Me</h2>
         <form id="contact-form" class="form">
@@ -37,7 +37,7 @@
             <input id="contact-form-phone" class="form-input" placeholder="Your Phone" type="phone">
             <textarea id="contact-form-message" class="form-input" placeholder="Your Message" rows="5"
                 cols="21"></textarea>
-            <button id="contact-form-message" class="form-btn">Submit Message</button>
+            <button id="contact-form-message" class="profile-btn">Submit Message</button>
         </form>
 
         <script src="profile.js"></script>
