--- a/neighborhood.html
+++ b/neighborhood.html
@@ -20,13 +20,15 @@
     <main>
         <section>
             <h1>About My Area</h1>
-            <img src="https://images.unsplash.com/photo-1533094699343-30187195e18d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80"/>
+            <img
+                src="https://images.unsplash.com/photo-1533094699343-30187195e18d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" />
         </section>
 
 
         <section>
             <h2>I'm from Utah, the great Beehive State</h2>
-            <p>Utah has a lot to offer including polution, traffic, and overpriced housing. If you choose to visit Utah, be sure to never drive on I15 between 5pm and 8pm.</p>
+            <p>Utah has a lot to offer including polution, traffic, and overpriced housing. If you choose to visit Utah,
+                be sure to never drive on I15 between 5pm and 8pm.</p>
         </section>
 
         <section>
@@ -36,9 +38,10 @@
                 <li><a href="https://www.wendys.com/">Wendy's</a></li>
                 <li><a href="https://www.bk.com/">BK</a></li>
             </ul>
-            
-            <p>Click the button for a random restaurant</p>
-            <button id="food-btn">Click Me</button>
+            <div id="food-container">
+                <button id="food-btn">Click Me for a Random Restaurant</button>
+                <P id="random-restaurant-list"> </P>
+            </div>
         </section>
     </main>
 
